--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ certifi==2020.6.20
 cffi==1.14.3
 click==7.1.2
 cycler==0.10.0
+dataclasses==0.8
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+ftfy==5.9
 imageio==2.9.0
 importlib-metadata==2.0.0
 ipykernel==5.3.4
@@ -58,6 +60,7 @@ PyWavelets==1.1.1
 pyzmq==20.0.0
 qtconsole==4.7.7
 QtPy==1.9.0
+regex==2021.3.17
 scikit-image==0.17.2
 scikit-learn==0.23.2
 scipy==1.5.2
@@ -67,8 +70,12 @@ terminado==0.9.1
 testpath==0.4.4
 threadpoolctl==2.1.0
 tifffile==2020.9.3
+torch==1.7.1
+torchvision==0.8.2
 tornado==6.1
+tqdm==4.59.0
 traitlets==4.3.3
+typing-extensions==3.10.0.0
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
