--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,14 @@ bleach==3.2.1
 certifi==2020.6.20
 cffi==1.14.3
 click==7.1.2
+cloudpickle==1.6.0
 cycler==0.10.0
+dask==2021.3.0
 dataclasses==0.8
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+fsspec==2021.7.0
 ftfy==5.9
 imageio==2.9.0
 importlib-metadata==2.0.0
@@ -28,6 +31,7 @@ jupyter-console==6.2.0
 jupyter-core==4.6.3
 jupyterlab-pygments==0.1.2
 kiwisolver==1.2.0
+locket==0.2.1
 MarkupSafe==1.1.1
 matplotlib==3.3.2
 mistune==0.8.4
@@ -43,12 +47,14 @@ packaging==20.4
 pandas==1.1.4
 pandocfilters==1.4.3
 parso==0.7.1
+partd==1.2.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==7.2.0
 pkg-resources==0.0.0
 prometheus-client==0.8.0
 prompt-toolkit==3.0.8
+psutil==5.8.0
 ptyprocess==0.6.0
 pycparser==2.20
 Pygments==2.7.2
@@ -57,6 +63,7 @@ pyrsistent==0.17.3
 python-dateutil==2.8.1
 pytz==2020.4
 PyWavelets==1.1.1
+PyYAML==5.4.1
 pyzmq==20.0.0
 qtconsole==4.7.7
 QtPy==1.9.0
@@ -70,6 +77,7 @@ terminado==0.9.1
 testpath==0.4.4
 threadpoolctl==2.1.0
 tifffile==2020.9.3
+toolz==0.11.1
 torch==1.7.1
 torchvision==0.8.2
 tornado==6.1
