--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ dask==2021.3.0
 dataclasses==0.8
 decorator==4.4.2
 defusedxml==0.6.0
+dill==0.3.4
 entrypoints==0.3
 fsspec==2021.7.0
 ftfy==5.9
@@ -32,9 +33,11 @@ jupyter-core==4.6.3
 jupyterlab-pygments==0.1.2
 kiwisolver==1.2.0
 locket==0.2.1
+mapply==0.1.9
 MarkupSafe==1.1.1
 matplotlib==3.3.2
 mistune==0.8.4
+multiprocess==0.70.12.2
 nbclient==0.5.1
 nbconvert==6.0.7
 nbformat==5.0.8
@@ -48,10 +51,13 @@ pandas==1.1.4
 pandocfilters==1.4.3
 parso==0.7.1
 partd==1.2.0
+pathos==0.2.8
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==7.2.0
 pkg-resources==0.0.0
+pox==0.3.0
+ppft==1.6.6.4
 prometheus-client==0.8.0
 prompt-toolkit==3.0.8
 psutil==5.8.0
